prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_const_array3.nut
const ARR1 = [1, null]
const ARR2 = [4, 3]

function fn(x: table = true ? {} : ARR2): null {}

return fn({})